samples/_failures_safe/1761593300_d0984e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64e0b3df.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_64e0b3df.c:174: error: expected ‘;’ at end of input
./samples/SAFE/__tmp_64e0b3df.c:173:5: error: expected declaration or statement at end of input
  173 |     for (int i = 0; i < MAX_VERTICES
      |     ^~~
